--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dxhmine's file downloader | 资源中心</title>
+  <title>Dxhmine's downloader | 资源中心</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://fastlist-css.pages.dev/css2.css">
   <link rel="stylesheet" href="https://fastlist-css.pages.dev/css.css">
@@ -721,7 +721,7 @@
       <div class="logo-icon">
         <i class="fas fa-cloud"></i>
       </div>
-      <h1>Dxhmine's file downloader</h1>
+      <h1>Dxhmine's downloader</h1>
     </div>
     <div class="github-stats">
       <div class="github-stat">
