Update title and disclaimer in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dxhmine's downloader | 资源中心</title>
+  <title>Dxhmine's 资源中心</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://fastlist-css.pages.dev/css2.css">
   <link rel="stylesheet" href="https://fastlist-css.pages.dev/css.css">
@@ -797,7 +797,7 @@
     <section class="disclaimer-section card">
       <strong><i class="fas fa-exclamation-circle"></i> 免责声明：</strong>
       本站所有资源均为来自于网络，不代表本站立场。下载内容仅供学习交流使用，不得用于商业用途。 
-      一切后果由使用者自行承担，如需删除内容，请联系Hy1Fly
+      一切后果由使用者自行承担
 
     </section>
     
